getting all groups ids of reposts

--- a/NextJS-main/my-app/public/toDo.txt
+++ b/NextJS-main/my-app/public/toDo.txt
@@ -1,4 +1,5 @@
-Обработка репостов
 обработка видео
-лайки, репосты, комментарии и их значение
 обработка комментариев к записям
+последний раз был в сети
+copy_history в репостнутых постах
+запихать все полученные данные со своими ключами в один объект {userId: posts.owner.id, userFirstname: profiles.first_name}
